components/heptagon/test/good/t6.ept

node f(x,z:int) returns (o1,o2:int)
  var o4:int;
  let
    switch (x = z)
      | true do
          o1 = 0 -> pre o1 + 2;
    o2 = o4 + 1;
    o4 = 3
      | false do
          o1 = 4;
    o2 = 5;
    o4 = 5
    end;
  tel

node main() returns (o1,o2:int)
var x,z:int;
let
  x = 0 fby 1 fby 2 fby x;
  z = 1 fby 2 fby z;
  (o1,o2) = f(x,z);
tel
